[package]
name = "rezlauncher"
version = "0.1.0"
description = "A modern desktop application for managing Rez packages"
authors = ["clement.hector"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = { version = "2.5.0", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full", "sync"] }
chrono = "0.4"
once_cell = "1.17.1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rand = "0.8"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
